--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <a id="a-very-brief-introduction-to-latex-using-rstudio-and-knitr" class="anchor" href="#a-very-brief-introduction-to-latex-using-rstudio-and-knitr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A Very Brief Introduction to LaTeX using RStudio and knitr</h3>
 
 <p>This is a one hour session just to introduce the basics of the two</p>
+
+<p>The slides are located <a href=notes.html>here</a></p>
       </section>
     </div>
 
