Changed Install Slide

--- a/notes.html
+++ b/notes.html
@@ -100,6 +100,8 @@
 <ul>
 <li>LaTeX is a typesetting language</li>
 <li>Brilliant for maths, managing references, tables, figures etc.</li>
+<li>Main file format is <code>.tex</code></li>
+<li>Bibliographies are usually saved as <code>bibliography.bib</code></li>
 </ul>
 
 <h3>Two Key References</h3>
@@ -111,16 +113,15 @@
 
 </article></slide><slide class=''><hgroup><h2>LaTeX </h2><h3> Installation</h3></hgroup><article  id="latex-installation">
 
-<ul>
-<li>Installing can be time-consuming</li>
-<li>For a basic installation:</li>
-</ul>
+<p>Installation is big and slow</p>
 
-<ol>
-<li>Clone this repo</li>
-<li><code>cd path/to/knitr-LaTeX</code></li>
-<li><code>sudo texlive_install.sh</code></li>
-</ol>
+<pre >sudo apt-get install texlive-full</pre>
+
+<ul>
+<li>Ubuntu: <a href='http://www.tug.org/texlive/doc/texlive-en/texlive-en.html' title=''>http://www.tug.org/texlive/doc/texlive-en/texlive-en.html</a></li>
+<li>Mac: <a href='http://www.tug.org/mactex/' title=''>http://www.tug.org/mactex/</a><br/></li>
+<li>Windows: <a href='http://miktex.org/howto/install-miktex' title=''>http://miktex.org/howto/install-miktex</a></li>
+</ul>
 
 </article></slide><slide class=''><hgroup><h2>LaTeX</h2></hgroup><article  id="latex-1">
 
