--- a/notes.html
+++ b/notes.html
@@ -437,7 +437,7 @@ Puromycin %&gt;%
 <li>They were only removed during the <code>print()</code> function</li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>Figure in RStudio</h2></hgroup><article  id="figure-in-rstudio">
+</article></slide><slide class=''><hgroup><h2>Figures in RStudio</h2></hgroup><article  id="figures-in-rstudio">
 
 <p>Chunks MUST be named to create figure labels</p>
 
