Updated Final Slide

--- a/notes.html
+++ b/notes.html
@@ -451,7 +451,17 @@ Puromycin %&gt;%
            fig.width=5, fig.height=4, 
            fig.cap = &quot;A barplot&quot;&gt;&gt;=
 barplot(1:5)
-@</pre></article></slide>
+@</pre>
+
+</article></slide><slide class=''><hgroup><h2>Printing R Output Within Text</h2></hgroup><article  id="printing-r-output-within-text">
+
+<p>To print the output of an R object in text:</p>
+
+<ul>
+<li>Enclose in <code>\Sexpr{}</code> (Symbolic Expression), e.g.</li>
+</ul>
+
+<pre >Data was collected for \Sexpr{nrow(mtcars)} vehicles</pre></article></slide>
 
 
   <slide class="backdrop"></slide>
